# infra-ansible

./: .gitignore  OWNERS  README.md  ansible.cfg  test.yml  todo
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
defaults/: main.yml
files/: clouds.yaml  openstack.py  openstack.yml  openstack_inventory.py
filter_plugins/: infra-ansible-filters.py  list-dict-diff.py  schedule_utils.py
handlers/: main.yml
images/infra-ansible/: Containerfile  Containerfile-python-27  Containerfile-python-38  Dockerfile  Makefile  README.md  extra-packages  install-packages  pyproject.toml  requirements-27.txt  requirements.txt
images/infra-ansible/python27/: Containerfile  requirements.txt  requirements.txt.bak
images/infra-ansible/python27/root/etc/ansible/: ansible.cfg
images/infra-ansible/python38/: Containerfile
images/infra-ansible/root/etc/ansible/: ansible.cfg  openstack.yml
meta/: main.yml
playbooks/: configure-dns-server.yml  etl-lb-vms.retry  etl-lb-vms.yml  identity.yml  infra-hosts.yml  infra-virt-hosts.yml  infrahosts.yml  install-osp-cluster.yml  install-server-ca-cert.yml  install.yml  lb-vms.yml  manage-confluence-space.yml  manage-slack.yml  openshift-manage-objects-via-api.yml  openshift-manage-objects-via-exec.yml  prep.yml  provision-dns-server.yml  quay-enterprise.yml  rhsm.yml  services.yml  subscribe-host.yml  update-access.yml  update-dhcp-config.yml  update-dns-records.yml  update-dns-zones-bind.yml  update-dns-zones-route53.yml  update-dns-zones.yml  vm.yml  vms.yml
tasks/: add_user_to_group.yml  add_user_to_groups.yml  (+6 more)
(+1755 files in other folders)
